--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,4 @@ app.mail.enabled=true
 app.jwt.secret=change_this_to_a_long_random_secret_key_at_least_32_chars
 app.jwt.expiration-minutes=60
 logging.level.org.springframework.security=DEBUG
+server.port=8081
